# updetect

./: .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: build.yaml
docker/: Makefile
docker/archlinux-build/: Dockerfile
scripts/: pypi-release.sh  pyproject-version.py
src/updetect/: __init__.py  __main__.py
tests/: test-updetect.py  test-updetect.sh
