[project]
name = "updetect"
version = "0.0.1"
authors = [
  { name="stnuessl" },
]

description = "Search parent directories for items matching specifiable names"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/stnuessl/updetect"
Issues = "https://github.com/stnuessl/updetect/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

